--- a/dino.html
+++ b/dino.html
@@ -11,10 +11,10 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a class="navbar-brand" href="/..">Hacks</a>
+                <a class="navbar-brand" href="index.html">Hacks</a>
               </div>
               <ul class="nav navbar-nav">
-                <li><a href="/..">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="prodigy.html">Prodigy Hack</a></li>
                 <li class="active"><a href="">Dino Game Hack</a></li>
                 <li><a href="quizlet.html">Quizlet Hack</a></li>
